--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,10 +2,8 @@ stages:
 - name: install
   steps:
   - runScriptConfig:
-      image: cloud-native-hbr.ad.infosys.com/rancher/node:latest
-      shellScript: |-
-        npm set registry http://infynp.ad.infosys.com/repository/npm-group/
-        npm install
+      image: node:latest
+      shellScript: npm install
     envFrom:
     - sourceName: harbor-registry
       sourceKey: username
@@ -16,24 +14,20 @@ stages:
 - name: code formatting
   steps:
   - runScriptConfig:
-      image: cloud-native-hbr.ad.infosys.com/rancher/node:latest
+      image: node:latest
       shellScript: npm run format
   - runScriptConfig:
-      image: cloud-native-hbr.ad.infosys.com/rancher/node:latest
+      image: node:latest
       shellScript: npm run build
 - name: publish
   steps:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: snehil.srivastava01/app:v1
+      tag: nickngch90/node-web-app
       pushRemote: true
-      registry: infydtr.ad.infosys.com
+      registry: harbor.nick.support.rancher.space
     env:
       PLUGIN_INSECURE: "true"
-- name: deploy
-  steps:
-  - applyYamlConfig:
-      path: ./deployment.yaml
 timeout: 60
 notification: {}
