--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,6 +4,13 @@ stages:
   - runScriptConfig:
       image: harbor.nick.support.rancher.space/nickngch90:latest
       shellScript: npm install
+    envFrom:
+    - sourceName: harbor1
+      sourceKey: username
+      targetKey: username
+    - sourceName: harbor1
+      sourceKey: password
+      targetKey: password
 - name: publish
   steps:
   - publishImageConfig:
